# rue

./: .buckconfig  .gitignore  BUCK  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install-extension.sh  reindeer.toml  rue.BUCK  spec.md
.github/ISSUE_TEMPLATE/: bug_report.md  infrastructure.md
.github/workflows/: benchmarks.yml  buck2.yml  ci.yml  claude.md  cross-platform.yml  docs.yml
crates/rue/: BUCK  Cargo.toml
crates/rue-ast/: BUCK  Cargo.toml
crates/rue-ast/src/: lib.rs
crates/rue-codegen/: BUCK  Cargo.toml
crates/rue-codegen/src/: lib.rs  regalloc.rs
crates/rue-compiler/: BUCK  Cargo.toml
crates/rue-compiler/examples/: basic_usage.rs
crates/rue-compiler/src/: lib.rs
crates/rue-lexer/: BUCK  Cargo.toml
crates/rue-lexer/src/: lib.rs
crates/rue-lsp/: BUCK  Cargo.toml  README.md
crates/rue-lsp/src/: lib.rs  main.rs
crates/rue-parser/: BUCK  Cargo.toml
crates/rue-parser/src/: lib.rs
crates/rue-semantic/: BUCK  Cargo.toml
crates/rue-semantic/src/: lib.rs
docs/: development-log.md  implementation.md  next-steps.md  roadmap.md  spec.md  technical-decisions.md  troubleshooting-notes.md
fixups/icu_properties_data/: fixups.toml
samples/: assignment_demo.rue  assignment_spec_example.rue  countdown.rue  factorial.rue  if_demo.rue  simple_assignment.rue  while_demo.rue
toolchains/: BUCK  remote_test_execution.bzl
vscode-rue-extension/: README.md  package-lock.json  package.json  tsconfig.json
vscode-rue-extension/src/: extension.ts
vscode-rue-extension/syntaxes/: rue.tmLanguage.json
(+17 files in other folders)
