[package]
name = "rue-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
rue-ast = { path = "../rue-ast" }
rue-lexer = { path = "../rue-lexer" }
rue-parser = { path = "../rue-parser" }
rue-semantic = { path = "../rue-semantic" }
rue-codegen = { path = "../rue-codegen" }
salsa = "0.22"